--- a/.github/workflows/apama.yml
+++ b/.github/workflows/apama.yml
@@ -104,11 +104,10 @@ jobs:
           g++ -std=c++11 -o $APAMA_WORK/lib/libAuthenticationPlugin.so -I$APAMA_HOME/include -L$APAMA_HOME/lib -lapclient -I. -shared -lcrypt -fPIC AuthenticationPlugin.cpp
 
       - name: PySys tests
-        working-directory: test
+        working-directory: tests
         shell: bash
         id: pysys
         run: |
-          cd tests
           $APAMA_PYSYS run --threads=auto --record --purge --printLogs=FAILURES -Xeplcoverage -XcodeCoverage --mode=ALL --outdir=`pwd`/__pysys_output/${{matrix.run-id}} 
 
       # If any tests fail, PySys will return an error code, so later steps will not run unless explicitly enabled with "if"
