--- a/.github/workflows/apama.yml
+++ b/.github/workflows/apama.yml
@@ -101,6 +101,7 @@ jobs:
         shell: bash
         if: runner.os != 'Windows'
         run: |
+          sudo apt install libcrypt1
           g++ -std=c++11 -o $APAMA_WORK/lib/libAuthenticationPlugin.so -I$APAMA_HOME/include -L$APAMA_HOME/lib -lapclient -I. -shared -lcrypt -fPIC AuthenticationPlugin.cpp
 
       - name: PySys tests
@@ -108,7 +109,7 @@ jobs:
         shell: bash
         id: pysys
         run: |
-          $APAMA_PYSYS run 
+          $APAMA_PYSYS run -Xeplcoverage --outdir=`pwd`/__pysys_output/${{matrix.run-id}} 
 
       # If any tests fail, PySys will return an error code, so later steps will not run unless explicitly enabled with "if"
 
