--- a/.github/workflows/apama.yml
+++ b/.github/workflows/apama.yml
@@ -109,6 +109,8 @@ jobs:
         shell: bash
         id: pysys
         run: |
+		    ldd /opt/softwareag/apama-work/lib/libAuthenticationPlugin.so
+			 find /usr -name libcrypt*
           $APAMA_PYSYS run -Xeplcoverage --outdir=`pwd`/__pysys_output/${{matrix.run-id}} 
 
       # If any tests fail, PySys will return an error code, so later steps will not run unless explicitly enabled with "if"
